# shortkit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.crates.md  README.md  audit.toml  clippy.toml  deny.toml
.github/workflows/: backfill.yml  ci.yml  nightly.yml  release.yml  security-nightly.yml
cli/: Cargo.toml
cli/src/: ingest.rs  main.rs
crates/shortkit/: Cargo.toml
crates/shortkit/src/: client.rs  error.rs  fetcher.rs  lib.rs  parquet_io.rs  record.rs
crates/shortkit/tests/: client.rs
data/: manifest.json
