[package]
name = "shortkit-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "shortkit-cli"
path = "src/main.rs"

[dependencies]
shortkit = { path = "../crates/shortkit", version = "0.1.0" }
tokio = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }

[dev-dependencies]
tempfile = "3"
